--- a/src/resource/ui/window.ui
+++ b/src/resource/ui/window.ui
@@ -79,6 +79,7 @@
                         <property name="label">gtk-quit</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
+                        <property name="action_name">app.quit</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                       </object>
