--- a/src/resource/ui/window.ui
+++ b/src/resource/ui/window.ui
@@ -187,9 +187,6 @@
                 <property name="label" translatable="yes">test</property>
                 <property name="use_underline">True</property>
                 <property name="icon_widget">image1</property>
-                <accessibility>
-                  <relation type="controller-for" target="tool_stack"/>
-                </accessibility>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -203,6 +200,8 @@
                 <property name="events">GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
                 <property name="label" translatable="yes">toolbutton</property>
                 <property name="use_underline">True</property>
+                <signal name="clicked" handler="test2_btn" object="AlveranAppWindow" after="yes" swapped="no"/>
+                <signal name="clicked" handler="test_btn" object="AlveranAppWindow" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
