--- a/src/resource/ui/window.ui
+++ b/src/resource/ui/window.ui
@@ -10,6 +10,7 @@
   </object>
   <template class="AlveranAppWindow" parent="GtkApplicationWindow">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Alveran - DSA 4.1 Toolset</property>
     <child>
       <placeholder/>
     </child>
@@ -188,19 +189,6 @@
                 <property name="use_underline">True</property>
                 <property name="icon_widget">image1</property>
                 <signal name="clicked" handler="open_taw_cb" swapped="no"/>
-              </object>
-              <packing>
-                <property name="expand">False</property>
-                <property name="homogeneous">True</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkToolButton">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">test2</property>
-                <property name="use_underline">True</property>
-                <signal name="clicked" handler="taw_open_cb" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
