--- a/src/resource/ui/window.ui
+++ b/src/resource/ui/window.ui
@@ -8,6 +8,11 @@
     <property name="events">GDK_BUTTON_RELEASE_MASK | GDK_STRUCTURE_MASK</property>
     <property name="resource">/de/bug0r/alveran/icon/test.png</property>
   </object>
+  <object class="GtkImage" id="image2">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="resource">/de/bug0r/alveran/icon/test.png</property>
+  </object>
   <template class="AlveranAppWindow" parent="GtkApplicationWindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Alveran - DSA 4.1 Toolset</property>
@@ -189,6 +194,20 @@
                 <property name="use_underline">True</property>
                 <property name="icon_widget">image1</property>
                 <signal name="clicked" handler="open_taw_cb" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="test2">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">test2</property>
+                <property name="use_underline">True</property>
+                <property name="icon_widget">image2</property>
+                <signal name="clicked" handler="open_lexicon_cb" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
