--- a/src/resource/ui/lexicon.ui
+++ b/src/resource/ui/lexicon.ui
@@ -17,7 +17,7 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkEntry" id="lexicon_search">
+              <object class="GtkEntry" id="lexicon_search_input">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
               </object>
@@ -79,6 +79,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <signal name="clicked" handler="lexicon_search_cb" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -101,17 +102,32 @@
             <property name="position_set">True</property>
             <property name="wide_handle">True</property>
             <child>
-              <object class="GtkListBox" id="lexicon_list">
+              <object class="GtkScrolledWindow">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can_focus">True</property>
+                <property name="shadow_type">in</property>
+                <child>
+                  <object class="GtkViewport">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="hscroll_policy">natural</property>
+                    <property name="vscroll_policy">natural</property>
+                    <child>
+                      <object class="GtkListBox" id="lexicon_list">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                    </child>
+                  </object>
+                </child>
               </object>
               <packing>
-                <property name="resize">True</property>
-                <property name="shrink">False</property>
+                <property name="resize">False</property>
+                <property name="shrink">True</property>
               </packing>
             </child>
             <child>
-              <object class="GtkTextView" id="lexicon_detail">
+              <object class="GtkTextView" id="lexicon_result_text">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
               </object>
