--- a/src/resource/css/default.css
+++ b/src/resource/css/default.css
@@ -1,4 +1,4 @@
-button:hover {
+/*button:hover {
     color: yellowgreen;
    background-color: green;
    opacity: 0.95;
@@ -26,8 +26,14 @@ button {
    background-image:  -gtk-gradient (linear,
             left top,
             left bottom,
-            color-stop(0.0,rgba(34,97,70,1)),
+            color-stop(0.0,rgb(70, 161, 122)),
             color-stop(0.50,rgba(56,145,118,1)),
             color-stop(0.51,rgba(34,131,116,1)),
             color-stop(1.00,rgba(104,191,134,1)));
 }
+
+toolbar {padding: 0px; margin: 0px;}
+combobox {padding: 0px; margin: 0px;}
+entry {padding: 0px; margin: 0px;}
+stackswitcher { padding: 0px;  margin: 0px;}
+*/
