--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -8,13 +8,13 @@
       <column type="gchararray"/>
     </columns>
   </object>
-  <object class="GtkWindow">
+  <object class="GtkWindow" id="hgen_window">
     <property name="can_focus">False</property>
     <child>
       <placeholder/>
     </child>
     <child>
-      <object class="GtkPaned">
+      <object class="GtkPaned" id="hgen_box">
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="position">100</property>
