--- a/src/resource/ui/window.ui
+++ b/src/resource/ui/window.ui
@@ -13,6 +13,11 @@
     <property name="can_focus">False</property>
     <property name="resource">/de/bug0r/alveran/icon/test.png</property>
   </object>
+  <object class="GtkImage" id="image3">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="resource">/de/bug0r/alveran/icon/test.png</property>
+  </object>
   <template class="AlveranAppWindow" parent="GtkApplicationWindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Alveran - DSA 4.1 Toolset</property>
@@ -208,6 +213,20 @@
                 <property name="use_underline">True</property>
                 <property name="icon_widget">image2</property>
                 <signal name="clicked" handler="open_lexicon_cb" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="hgen_">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">test3</property>
+                <property name="use_underline">True</property>
+                <property name="icon_widget">image3</property>
+                <signal name="clicked" handler="open_hgen_cb" swapped="no"/>
               </object>
               <packing>
                 <property name="expand">False</property>
