--- a/src/resource/ui/window.ui
+++ b/src/resource/ui/window.ui
@@ -21,6 +21,8 @@
   <template class="AlveranAppWindow" parent="GtkApplicationWindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Alveran - DSA 4.1 Toolset</property>
+    <property name="default_width">640</property>
+    <property name="default_height">480</property>
     <child>
       <placeholder/>
     </child>
