--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -84,6 +84,12 @@
       <column type="gchararray"/>
     </columns>
   </object>
+  <object class="GtkListStore" id="hgen_sa_liststore">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -860,6 +866,8 @@
                                                   <object class="GtkTreeViewColumn">
                                                     <property name="resizable">True</property>
                                                     <property name="title" translatable="yes">Vorteile</property>
+                                                    <property name="sort_indicator">True</property>
+                                                    <property name="sort_column_id">0</property>
                                                     <child>
                                                       <object class="GtkCellRendererText"/>
                                                       <attributes>
@@ -924,6 +932,8 @@
                                                 <child>
                                                   <object class="GtkTreeViewColumn">
                                                     <property name="title" translatable="yes">Nachteile</property>
+                                                    <property name="sort_indicator">True</property>
+                                                    <property name="sort_column_id">0</property>
                                                     <child>
                                                       <object class="GtkCellRendererText"/>
                                                       <attributes>
@@ -967,10 +977,79 @@
                                         <property name="position">3</property>
                                       </packing>
                                     </child>
+                                    <child>
+                                      <object class="GtkScrolledWindow">
+                                        <property name="width_request">120</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="shadow_type">in</property>
+                                        <child>
+                                          <object class="GtkViewport">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">False</property>
+                                            <child>
+                                              <object class="GtkTreeView" id="hgen_sa_list">
+                                                <property name="name">0</property>
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="model">hgen_sa_liststore</property>
+                                                <property name="search_column">0</property>
+                                                <child internal-child="selection">
+                                                  <object class="GtkTreeSelection"/>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkTreeViewColumn">
+                                                    <property name="resizable">True</property>
+                                                    <property name="title" translatable="yes">Sonderfertigkeiten</property>
+                                                    <property name="sort_indicator">True</property>
+                                                    <property name="sort_column_id">0</property>
+                                                    <child>
+                                                      <object class="GtkCellRendererText"/>
+                                                      <attributes>
+                                                        <attribute name="text">0</attribute>
+                                                      </attributes>
+                                                    </child>
+                                                  </object>
+                                                </child>
+                                              </object>
+                                            </child>
+                                          </object>
+                                        </child>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">4</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkScrolledWindow">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="shadow_type">in</property>
+                                        <child>
+                                          <object class="GtkViewport">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">False</property>
+                                            <child>
+                                              <object class="GtkListBox" id="hgen_hero_sa_list">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">False</property>
+                                              </object>
+                                            </child>
+                                          </object>
+                                        </child>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">True</property>
+                                        <property name="fill">True</property>
+                                        <property name="position">5</property>
+                                      </packing>
+                                    </child>
                                   </object>
                                   <packing>
                                     <property name="name">page0</property>
-                                    <property name="title" translatable="yes">Vor- / Nachteile</property>
+                                    <property name="title" translatable="yes">Vor- / Nachteile / Sonderfertigkeiten</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1012,27 +1091,6 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkBox">
-                                    <property name="visible">True</property>
-                                    <property name="can_focus">False</property>
-                                    <property name="orientation">vertical</property>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                    <child>
-                                      <placeholder/>
-                                    </child>
-                                  </object>
-                                  <packing>
-                                    <property name="name">page2</property>
-                                    <property name="title" translatable="yes">Sonderfertigkeiten</property>
-                                    <property name="position">2</property>
-                                  </packing>
-                                </child>
-                                <child>
                                   <object class="GtkGrid">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
@@ -1067,7 +1125,7 @@
                                   <packing>
                                     <property name="name">page3</property>
                                     <property name="title" translatable="yes">Zauber</property>
-                                    <property name="position">3</property>
+                                    <property name="position">2</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -1105,7 +1163,7 @@
                                   <packing>
                                     <property name="name">page4</property>
                                     <property name="title" translatable="yes">Liturgien</property>
-                                    <property name="position">4</property>
+                                    <property name="position">3</property>
                                   </packing>
                                 </child>
                               </object>
