--- a/src/resource/ui/hgen_xslt.ui
+++ b/src/resource/ui/hgen_xslt.ui
@@ -251,6 +251,7 @@
   <object class="GtkImage" id="image1">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
+    <property name="margin_right">1</property>
     <property name="icon_name">document-edit-symbolic</property>
   </object>
   <object class="GtkImage" id="image10">
@@ -431,6 +432,7 @@
                     <property name="receives_default">True</property>
                     <property name="image">image8</property>
                     <property name="always_show_image">True</property>
+                    <signal name="clicked" handler="alveran_hgen_hero_add_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
