--- a/src/resource/ui/hgen_raw.ui
+++ b/src/resource/ui/hgen_raw.ui
@@ -120,6 +120,8 @@
     <columns>
       <!-- column-name Helden -->
       <column type="gchararray"/>
+      <!-- column-name hero_data -->
+      <column type="gpointer"/>
     </columns>
   </object>
   <object class="GtkListStore" id="hgen_contra_liststore">
@@ -426,7 +428,7 @@
                     <property name="receives_default">True</property>
                     <property name="image">image8</property>
                     <property name="always_show_image">True</property>
-                    <signal name="clicked" handler="alveran_hgen_hero_add_cb" swapped="no"/>
+                    <signal name="clicked" handler="alveran_hgen_hero_add_new_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -441,6 +443,7 @@
                     <property name="receives_default">True</property>
                     <property name="image">image9</property>
                     <property name="always_show_image">True</property>
+                    <signal name="clicked" handler="alveran_hgen_hero_remove_sel_cb" swapped="no"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -479,7 +482,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <child>
-                      <object class="GtkTreeView">
+                      <object class="GtkTreeView" id="hero_list">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="model">hero_list_store</property>
